--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Oscar
-middle_name: L.
+middle_name: 
 last_name: Jaroker
 email: oscarjaroker@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -94,7 +94,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+scholar_userid:  # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -167,12 +167,12 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
-  - name: Google Blog
+  - name: #medium.com
+    rss_url: #https://medium.com/@al-folio/feed
+  - name: #Google Blog
     posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
+      - url: #https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
+        published_date: #2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -311,8 +311,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Jaroker]
+  first_name: [Oscar]
 
   style: apa
   locale: en
